--- a/src/app/curriculum-management/curriculum-management.component.html
+++ b/src/app/curriculum-management/curriculum-management.component.html
@@ -1,11 +1,15 @@
 <div class="flex flex-col p-14">
   <div class="flex mb-8">
     <div class="form-control w-full max-w-lg">
-      <select class="select select-bordered">
+      <select
+        class="select select-bordered"
+        #filter
+        (change)="filterDepartment(filter.value)">
         <option disabled selected>Select a department</option>
+        <option value="">All</option>
         <option
           *ngFor="let department of departments$ | async"
-          [value]="department.id">
+          [value]="department.name">
           {{ department.name }}
         </option>
       </select>
@@ -13,7 +17,7 @@
   </div>
   <div class="flex gap-8 flex-wrap flex-row">
     <app-curriculum-card *ngFor="let curriculum of curriculums$ | async">
-      <div class="flex flex-col p-8 gap-2">
+      <div class="flex flex-col w-full p-8 gap-2">
         <div class="flex flex-row">
           <div class="flex">
             <h1 class="text-2xl font-bold">
@@ -22,28 +26,14 @@
           </div>
         </div>
         <div class="flex">
-          <p class="text-base">Submitted By: Rosemarie M. Bautista, DIT</p>
-        </div>
-        <div class="flex">
-          <p class="text-base">
-            Submitted Date: {{ curriculum.created_at?.toLocaleDateString() }}
-          </p>
-        </div>
-        <div class="flex">
-          <div class="text-base">
-            Status:
-            <div class="badge rounded-lg badge-lg badge-success">Approved</div>
-          </div>
-        </div>
-        <div class="flex">
-          <div class="text-base">
-            <div class="badge rounded-lg badge-lg badge-warning">
-              Comments: 32
-            </div>
-          </div>
+          <p class="text-base">Description: {{ curriculum.description }}</p>
         </div>
         <div class="flex justify-center mt-auto">
-          <button class="btn btn-primary rounded-2xl">View Curriculum</button>
+          <button
+            class="btn btn-accent rounded-2xl"
+            (click)="onViewCurriculum(curriculum?.id ?? -1)">
+            View Curriculum
+          </button>
         </div>
       </div>
     </app-curriculum-card>
@@ -72,15 +62,25 @@
         <div
           class="flex flex-col rrounded-lg p-20 items-center justify-center gap-8 bg-base-100">
           <h1 class="text-4xl font-bold mb-6">Create New Curriculum</h1>
+          <div class="form-control w-full max-w-xs">
+            <label class="label">
+              <span class="label-text">Curriculum for</span>
+            </label>
+            <select
+              class="select select-bordered"
+              formControlName="department_id">
+              <option disabled selected>Select a department</option>
+              <option
+                *ngFor="let department of departments$ | async"
+                [value]="department.id">
+                {{ department.name }}
+              </option>
+            </select>
+          </div>
           <input
             type="text"
-            formControlName="code"
-            placeholder="Code"
-            class="input input-bordered input-neutral w-full max-w-xs" />
-          <input
-            type="text"
-            formControlName="name"
-            placeholder="Name"
+            formControlName="title"
+            placeholder="Curriculum Title"
             class="input input-bordered input-neutral w-full max-w-xs" />
           <input
             type="text"
