--- a/src/app/shared/layouts/sidebar.component.html
+++ b/src/app/shared/layouts/sidebar.component.html
@@ -1,9 +1,9 @@
 <div class="drawer drawer-mobile">
   <input id="my-drawer-2" type="checkbox" class="drawer-toggle" />
   <div
-    class="drawer-content flex flex-col justify-start bg-base-200 h-full w-full">
+    class="drawer-content flex flex-col justify-start bg-base-100 h-full w-full">
     <div class="flex w-full sticky top-0 z-50">
-      <div class="navbar bg-base-100">
+      <div class="navbar bg-base-100 border-b shadow-sm border-base-300">
         <div class="flex-none">
           <label
             for="my-drawer-2"
@@ -50,10 +50,9 @@
   </div>
   <div class="drawer-side">
     <label for="my-drawer-2" class="drawer-overlay"></label>
-    <ul class="menu p-4 w-80 bg-base-100 text-base-content">
+    <ul class="menu p-4 w-80 bg-base-200 text-base-content">
       <li class="text-2xl font-bold">CICT Curriculum Management System</li>
-      <div class="divider"></div>
-      <div class="flex flex-col gap-4">
+      <div class="flex flex-col gap-4 mt-5">
         <li>
           <a
             [routerLink]="'dashboard'"
@@ -80,13 +79,6 @@
             [routerLink]="'subject-management'"
             [routerLinkActive]="'bg-primary text-primary-content'"
             >Subject Management</a
-          >
-        </li>
-        <li>
-          <a
-            [routerLink]="'semester-management'"
-            [routerLinkActive]="'bg-primary text-primary-content'"
-            >Semester Management</a
           >
         </li>
         <li>
