--- a/src/app/user-management/user-management.component.html
+++ b/src/app/user-management/user-management.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col">
+<div class="flex flex-col p-4">
   <div class="flex items-center">
     <div class="flex tabs ml-5">
       <a
@@ -21,7 +21,7 @@
     </div>
   </div>
 
-  <div class="flex flex-col h-full w-full">
+  <div class="flex flex-col h-full w-full bg-base-200 rounded-lg">
     <!--  ACTIVE USER TABLE -->
     <ng-container *ngIf="tab === 'active'">
       <div class="flex overflow-x-auto w-full h-full p-5">
