--- a/src/app/shared/layouts/sidebar.component.html
+++ b/src/app/shared/layouts/sidebar.component.html
@@ -92,7 +92,14 @@
       <div class="flex flex-col mt-auto">
         <li>
           <a
-            [routerLink]="'settings'"
+            [routerLink]="'feedbacks'"
+            [routerLinkActive]="'bg-primary text-primary-content'"
+            >Feedbacks</a
+          >
+        </li>
+        <li>
+          <a
+            [routerLink]="'/feedbacks'"
             [routerLinkActive]="'bg-primary text-primary-content'"
             >Settings</a
           >
