--- a/src/app/curriculum-management/curriculum-management.component.html
+++ b/src/app/curriculum-management/curriculum-management.component.html
@@ -25,7 +25,7 @@
             </h1>
           </div>
         </div>
-        <div class="flex">
+        <div class="flex" *ngIf="curriculum.description">
           <p class="text-base">Description: {{ curriculum.description }}</p>
         </div>
         <div class="flex justify-center mt-auto">
